--- a/.github/workflows/build-and-upload-branch.yaml
+++ b/.github/workflows/build-and-upload-branch.yaml
@@ -5,14 +5,16 @@ on:
       - master
       - 'release-*'
       - '*-dev'
+      # - TODO RC remove
+      - richard-drone-dashboard-pr
 
 jobs:
   build-validation:
     name: Validate Code
-    uses: ./.github/workflows/build-dash-validation.yaml
+    uses: ./.github/workflows/build-test.yaml
   build:
     name: Build and Upload
-    uses: ./.github/workflows/build-dash-build-and-upload.yaml
+    uses: ./.github/workflows/build-and-upload.yaml
     needs:
       - build-validation
     permissions:
