--- a/.github/workflows/build-and-upload-branch.yaml
+++ b/.github/workflows/build-and-upload-branch.yaml
@@ -5,6 +5,8 @@ on:
       - master
       - 'release-*'
       - '*-dev'
+      # TODO RC remove
+      - richard-drone-dashboard
 
 jobs:
   build-validation:
